--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.17.1",
     "mongoose": "^5.9.19",
     "morgan": "^1.10.0",
+    "path": "^0.12.7",
     "serve-static": "^1.14.1"
   }
 }
