--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Service for PetToyCo that mimics the review module of PetCo.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint . --ext .js,.jsx"
   },
   "repository": {
     "type": "git",
@@ -21,9 +22,18 @@
     "@babel/preset-env": "^7.10.2",
     "@babel/preset-react": "^7.10.1",
     "@testing-library/react": "^10.2.1",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "chai": "^4.2.0",
+    "eslint": "^7.2.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.20.0",
     "mocha": "^8.0.1",
+    "pre-commit": "^1.2.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "webpack": "^4.43.0"
   },
   "dependencies": {
@@ -33,5 +43,8 @@
     "morgan": "^1.10.0",
     "path": "^0.12.7",
     "serve-static": "^1.14.1"
-  }
+  },
+  "pre-commit": [
+    "lint"
+  ]
 }
