--- a/.eslintrc
+++ b/.eslintrc
@@ -5,5 +5,6 @@
     "browser": true,
     "node": true
   },
-  "parser": "babel-eslint"
+  "parser": "babel-eslint",
+  "ignorePatterns": ["app.js"]
 }
