--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint . --ext .js,.jsx"
+    "lint": "eslint . --ext .js,.jsx",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -42,7 +43,8 @@
     "mongoose": "^5.9.19",
     "morgan": "^1.10.0",
     "path": "^0.12.7",
-    "serve-static": "^1.14.1"
+    "serve-static": "^1.14.1",
+    "webpack-cli": "^3.3.11"
   },
   "pre-commit": [
     "lint"
