--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "pre-commit": "^1.2.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "webpack": "^4.43.0"
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -43,8 +44,7 @@
     "mongoose": "^5.9.19",
     "morgan": "^1.10.0",
     "path": "^0.12.7",
-    "serve-static": "^1.14.1",
-    "webpack-cli": "^3.3.11"
+    "serve-static": "^1.14.1"
   },
   "pre-commit": [
     "lint"
