--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Service for PetToyCo that mimics the review module of PetCo.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "lint": "eslint . --ext .js,.jsx",
-    "build": "webpack"
+    "build": "webpack -D"
   },
   "repository": {
     "type": "git",
@@ -22,8 +22,10 @@
     "@babel/core": "^7.10.2",
     "@babel/preset-env": "^7.10.2",
     "@babel/preset-react": "^7.10.1",
+    "@testing-library/jest-dom": "^5.10.1",
     "@testing-library/react": "^10.2.1",
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^26.0.1",
     "babel-loader": "^8.1.0",
     "chai": "^4.2.0",
     "eslint": "^7.2.0",
@@ -31,11 +33,16 @@
     "eslint-plugin-import": "^2.21.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.20.0",
+    "jest": "^26.0.1",
+    "jsdom": "^16.2.2",
+    "jsdom-global": "^3.0.2",
     "mocha": "^8.0.1",
     "pre-commit": "^1.2.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "webpack": "^4.43.0",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
     "webpack-cli": "^3.3.11"
   },
   "dependencies": {
