--- a/package.json
+++ b/package.json
@@ -37,9 +37,9 @@
     "pre-commit": "^1.2.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "webpack": "^4.43.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
+    "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   },
   "dependencies": {
@@ -48,7 +48,8 @@
     "mongoose": "^5.9.19",
     "morgan": "^1.10.0",
     "path": "^0.12.7",
-    "serve-static": "^1.14.1"
+    "serve-static": "^1.14.1",
+    "lorem-ipsum": "^2.0.3"
   },
   "pre-commit": [
     "lint"
