seedDatabase.js correctly seeds database once running terminal command: npm run seedDb

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "jest",
     "testSeed": "mocha server/seed/seed.test.js",
+    "seedDb": "node server/seedDatabase.js",
     "lint": "eslint . --ext .js,.jsx",
     "build": "webpack -D"
   },
