--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest",
     "testSeed": "mocha server/seed/seed.test.js",
     "seedDb": "node server/seedDatabase.js",
+    "server": "node server/index.js",
     "lint": "eslint . --ext .js,.jsx",
     "build": "webpack -D"
   },
