--- a/.eslintrc
+++ b/.eslintrc
@@ -27,5 +27,6 @@
     "jsx-quotes": 0,
     "jsx-a11y/control-has-associated-label": 0,
     "react/button-has-type": 0,
+    "jsx-a11y/mouse-events-have-key-events",
   }
 }
