--- a/.eslintrc
+++ b/.eslintrc
@@ -27,6 +27,7 @@
     "jsx-quotes": 0,
     "jsx-a11y/control-has-associated-label": 0,
     "react/button-has-type": 0,
-    "jsx-a11y/mouse-events-have-key-events",
+    "jsx-a11y/mouse-events-have-key-events": 0,
+    "no-mixed-operators": 0,
   }
 }
