Made great progress on Filter component
Numerous reducers/Action generators added that will be used by other
components too.
RatingsFilter subcomponent functionality implemented.
NonNumberFilterSettings subcomponent functionality implemented.
RatingsFilterSettings subcomponent functionality implemented.

--- a/.eslintrc
+++ b/.eslintrc
@@ -30,5 +30,8 @@
     "jsx-a11y/mouse-events-have-key-events": 0,
     "no-mixed-operators": 0,
     "dot-notation": 0,
+    "jsx-a11y/click-events-have-key-events": 0,
+    "jsx-a11y/no-static-element-interactions": 0,
+    "react/jsx-one-expression-per-line": 0,
   }
 }
