--- a/.eslintrc
+++ b/.eslintrc
@@ -33,5 +33,7 @@
     "jsx-a11y/click-events-have-key-events": 0,
     "jsx-a11y/no-static-element-interactions": 0,
     "react/jsx-one-expression-per-line": 0,
+    "react/jsx-closing-tag-location": 0,
+    "jsx-a11y/alt-text": 0,
   }
 }
