WIP Filter component CSS. Main accomplishments, button and drop down CSS

--- a/.eslintrc
+++ b/.eslintrc
@@ -35,5 +35,6 @@
     "react/jsx-one-expression-per-line": 0,
     "react/jsx-closing-tag-location": 0,
     "jsx-a11y/alt-text": 0,
+    "prefer-object-spread": 0,
   }
 }
