--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Service for PetToyCo that mimics the review module of PetCo.",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --coverage",
     "testSeed": "mocha server/seed/seed.test.js",
     "seedDb": "node server/seedDatabase.js",
     "server": "node server/index.js",
@@ -27,21 +27,28 @@
     "@babel/preset-react": "^7.10.1",
     "@testing-library/jest-dom": "^5.10.1",
     "@testing-library/react": "^10.2.1",
+    "axios": "^0.19.2",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.0.1",
     "babel-loader": "^8.1.0",
     "chai": "^4.2.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "enzyme-to-json": "^3.5.0",
     "eslint": "^7.2.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-plugin-import": "^2.21.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.20.0",
+    "jest": "^26.1.0",
     "mocha": "^8.0.1",
+    "moment": "^2.27.0",
     "pre-commit": "^1.2.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
+    "redux-mock-store": "^1.5.4",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   },
@@ -54,9 +61,16 @@
     "nock": "^12.0.3",
     "path": "^0.12.7",
     "serve-static": "^1.14.1",
-    "thunk": "0.0.1"
+    "thunk": "0.0.1",
+    "webpack-node-externals": "^1.7.2"
   },
   "pre-commit": [
     "lint"
-  ]
+  ],
+  "jest": {
+    "setupTestFrameworkScriptFile": "<rootDir>__tests__/setup/setupEnzyme.js",
+    "testPathIgnorePatterns": [
+      "<rootDir>/__tests__/setup/"
+    ]
+  }
 }
