--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Service for PetToyCo that mimics the review module of PetCo.",
   "main": "index.js",
   "scripts": {
-    "test": "jest --coverage",
+    "test": "jest",
     "testSeed": "mocha server/seed/seed.test.js",
     "seedDb": "node server/seedDatabase.js",
     "server": "node server/index.js",
