--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
+    "redux-actions-assertions": "^1.3.0",
     "redux-mock-store": "^1.5.4",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
@@ -71,6 +72,7 @@
     "setupTestFrameworkScriptFile": "<rootDir>__tests__/setup/setupEnzyme.js",
     "testPathIgnorePatterns": [
       "<rootDir>/__tests__/setup/"
-    ]
+    ],
+    "testEnvironment": "jsdom"
   }
 }
