--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest __tests__/componentTests/ --runInBand --silent --coverage",
+    "testServer": "jest __tests__/serverEndpointsTests/ --runInBand --silent --coverage",
     "testSeed": "jest server/seed/seed.test.js",
     "seedDb": "node server/seedDatabase.js",
     "server": "node server/index.js",
