--- a/.eslintrc
+++ b/.eslintrc
@@ -40,5 +40,6 @@
     "no-shadow": 0,
     "no-lonely-if": 0,
     "jsx-a11y/anchor-is-valid": 0,
+    "react/prefer-stateless-function": 0,
   }
 }
