--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest __tests__/componentTests/ --runInBand --silent --coverage",
     "testServer": "jest __tests__/serverEndpointsTests/ --runInBand --silent --coverage",
-    "testSeed": "jest server/seed/seed.test.js",
+    "testSeed": "jest server/seed/seed.test.js --coverage",
     "seedDb": "node server/seedDatabase.js",
     "server": "node server/index.js",
     "lint": "eslint . --ext .js,.jsx",
