--- a/.eslintrc
+++ b/.eslintrc
@@ -42,5 +42,6 @@
     "jsx-a11y/anchor-is-valid": 0,
     "react/prefer-stateless-function": 0,
     "react/jsx-boolean-value": 0,
+    "prefer-destructuring": 0,
   }
 }
