--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
     "eslint-plugin-react": "^7.20.0",
     "jest": "^26.1.0",
     "jest-serial-runner": "^1.1.0",
-    "mocha": "^8.0.1",
     "moment": "^2.27.0",
+    "nock": "^12.0.3",
     "pre-commit": "^1.2.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -53,19 +53,16 @@
     "redux-actions-assertions": "^1.3.0",
     "redux-mock-store": "^1.5.4",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
-    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "lorem-ipsum": "^2.0.3",
     "mongoose": "^5.9.19",
     "morgan": "^1.10.0",
-    "nock": "^12.0.3",
     "path": "^0.12.7",
-    "serve-static": "^1.14.1",
-    "thunk": "0.0.1",
-    "webpack-node-externals": "^1.7.2"
+    "serve-static": "^1.14.1"
   },
   "pre-commit": [
     "lint"
