Added bash scripts

--- a/.dockerignore
+++ b/.dockerignore
@@ -7,3 +7,10 @@ webpack.config.js
 .eslintrc.txt
 .babelrc.js
 client/src/**/*
+bashScript.sh
+bashScript2.sh
+bashScript3.sh
+bashScript4.sh
+bashScript5.sh
+bashScript6.sh
+bashScript7.sh
