--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-jest": "^26.0.1",
     "babel-loader": "^8.1.0",
     "chai": "^4.2.0",
+    "compression-webpack-plugin": "^4.0.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-to-json": "^3.5.0",
@@ -41,6 +42,7 @@
     "eslint-plugin-import": "^2.21.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.20.0",
+    "html-loader": "^1.1.0",
     "jest": "^26.1.0",
     "jest-serial-runner": "^1.1.0",
     "moment": "^2.27.0",
@@ -58,11 +60,13 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
     "lorem-ipsum": "^2.0.3",
     "mongoose": "^5.9.19",
     "morgan": "^1.10.0",
     "path": "^0.12.7",
-    "serve-static": "^1.14.1"
+    "serve-static": "^1.14.1",
+    "zlib": "^1.0.5"
   },
   "pre-commit": [
     "lint"
